# actix-web-metrics-mw

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  MORE_METRICS.md  README.md  docker-compose.yml
.github/workflows/: build.yml
examples/: simple.rs
src/: lib.rs  statsd_metrics.rs
