[package]
name = "actix_web_metrics_mw"
version = "0.0.1"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"
description = "Actix middleware library for metrics"
homepage = "https://github.com/Igosuki/actix-web-metrics-mw"
repository = "https://github.com/Igosuki/actix-web-metrics-mw"
documentation = "https://docs.rs/actix-web-metrics-mw"
readme = "README.md"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
keywords = ["actix", "actix-web", "statsd", "middleware", "metrics"]
categories = ["network-programming", "asynchronous", "metrics", "web-programming::metrics", "statsd"]
license = "MIT/Apache-2.0"

#[package.metadata.docs.rs]
#features = ["metrics", "statsd"]

# http client
#statsd = ["statsd_metrics"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[badges]
travis-ci = { repository = "Igosuki/actix-web-metrics-mw", branch = "master" }
codecov = { repository = "Igosuki/actix-web-metrics-mw", branch = "master", service = "github" }

[lib]
name = "actix_web_metrics_mw"
path = "src/lib.rs"

[dependencies]
actix-web = "2.0.0-rc"
futures = "0.3"
actix-service = "1.0.1"
metrics = "0.12.1"
metrics-core = "0.5.2"
metrics-runtime = "0.12.1"
log = "0.4.8"
pin-project = "0.4.6"
cadence = "0.18.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "0.12.0"

[dev-dependencies]
actix-rt = "1.0.0"
futures-util = "0.3.1"

#[patch.crates-io]
#actix-web-metrics-mw = { path = "." }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
